...
  val calendarState by calendarViewModel.calendarState.collectAsState(initial = emptyList())

  // Initial Setup
  CalendarScreenLaunchedEffect(calendarViewModel = calendarViewModel)

  // Application
  Scaffold(modifier = Modifier.testTag("calenmdarScreen")) { innerPadding ->
    Column(
        modifier = Modifier.fillMaxSize().padding(innerPadding).testTag("calendarScreenColumn"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Top) {
          // CalendarView composable to wrap Android's CalendarView
          CalendarView(
...
