...
                MimeTypeMap.getSingleton()
                    .getMimeTypeFromExtension(uri.path?.substringAfterLast(".") ?: ""))
        else Log.d("DocumentList", "No file selected")
      }

  Scaffold(
      modifier = Modifier.testTag("documentListScreen"),
      floatingActionButton = {
        var toggled by remember { mutableStateOf(false) }

        Column(horizontalAlignment = Alignment.End) {
          if (toggled) {
            Column(horizontalAlignment = Alignment.End, verticalArrangement = Arrangement.Bottom) {
...
